<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="#FFFFFF"
    android:fitsSystemWindows="true"
    android:clipToPadding="false">

 <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:orientation="vertical"
        >

<ImageView
    android:layout_width="200px"
    android:layout_height="200px"
    android:layout_marginTop="50dp"
    android:layout_gravity="center"
    android:src="@drawable/logo"/>


   <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="50dp"
    android:layout_marginTop="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
     >

    <TextView
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="fill_parent"
        android:gravity="center_vertical"
        android:text="@string/user_name"
       />
    <EditText
        android:id="@+id/username"
        style="@style/edit_text_style"
        android:layout_weight="11"
        android:maxLength="18"
        android:hint="手机号/账户"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/pass_word"/>
        <EditText
            android:id="@+id/password"
            style="@style/edit_text_style"
            android:layout_weight="11"
            android:maxLength="16"
            android:hint="输入登陆密码"
            android:inputType="textPassword"
            />
    </LinearLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        android:background="@android:color/holo_blue_light"
        android:textColor="@android:color/white" />
    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:textColor="@android:color/holo_blue_light"
        android:text="@string/forget_password"
        android:gravity="center"/>
 </LinearLayout>
    <TextView
        android:id="@+id/user_sign"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:layout_gravity="center"
        android:textColor="@android:color/holo_blue_light"
        android:text="@string/new_user_sign"
        android:gravity="center"/>
</LinearLayout>
