<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.binbin.activity.changephone.PhoneNumChangeFirstStepActivity"
    android:orientation="vertical"
    android:background="#ffffff">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:maxLength="16"
            android:singleLine="true"
            android:textSize="16dp"
            android:text="@string/input_bind_phone_num"
            android:layout_marginBottom="0dp"/>
        <View android:layout_height="2dip" android:layout_width="match_parent"
            android:background="@android:color/holo_blue_light" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_height="50dp"
                android:layout_width="0dp"
                android:layout_marginLeft="20dp"
                android:gravity="center_vertical"
                android:text="@string/phone_number"
                android:textSize="@dimen/user_info_font_size"
                android:layout_weight="3"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="5"
                android:maxLength="16"
                android:gravity="center"
                android:textSize="@dimen/user_info_font_size"
                android:textColor="@android:color/darker_gray"
                android:hint="@string/input_bind_phone_num_notice"
                android:singleLine="true"
                android:text=""/>
        </LinearLayout>
        <View android:layout_height="2dip" android:layout_width="match_parent"
            android:background="@android:color/holo_blue_light" />
    </LinearLayout>
    <Button
        android:id="@+id/next"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/next_step"
        android:background="@android:color/holo_blue_light"
        android:textColor="@android:color/white"
        android:onClick="nextStep"/>

</LinearLayout>
