<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context="com.binbin.activity.SignActivity"
    android:orientation="vertical"
    android:background="#ffffff">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        >
    <TextView
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:gravity="center_vertical"
        android:text="@string/sign_user_name"
        android:layout_weight="2"/>
       <EditText
           android:id="@+id/sign_username"
          style="@style/edit_text_style"
           android:layout_weight="11"
           android:maxLength="16"
           android:hint="例如”狗蛋“"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/mobile_phone"
            android:layout_weight="2"/>
        <EditText
            android:id="@+id/sign_mobile_phone"
            android:layout_width="0dp"
            style="@style/edit_text_style"
            android:layout_weight="11"
            android:maxLength="16"
            android:hint="手机将作为唯一账号"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:layout_weight="2"
            android:text="@string/pass_word"/>
        <EditText
            android:id="@+id/sign_password"
            android:layout_width="0dp"
            android:layout_weight="11"
            style="@style/edit_text_style"
            android:maxLength="16"
            android:inputType="textVisiblePassword"
            android:hint="需要字母数字或符号"
            />
    </LinearLayout>
    <Button
        android:id="@+id/sign"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/sign"
        android:background="@android:color/holo_blue_light"
        android:textColor="@android:color/white" />
</LinearLayout>
