<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.binbin.activity.InfoAccountActivity"
    android:orientation="vertical">

        <View android:layout_height="2dip" android:layout_width="match_parent"
            android:background="@android:color/holo_blue_light" />
        <LinearLayout
            android:id="@+id/go_username"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
        >
            <TextView
                android:layout_height="50dp"
                android:layout_width="0dp"
                android:layout_marginLeft="20dp"
                android:textSize="@dimen/user_info_font_size"
                android:gravity="center_vertical"
                android:text="@string/user_info"
                android:layout_weight="3"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="5"
                android:maxLength="16"
                android:textSize="@dimen/user_info_font_size"
                android:textColor="@android:color/darker_gray"
                android:gravity="right"
                android:singleLine="true"
                android:text="东奔西走"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:maxLength="16"
                android:textSize="@dimen/user_info_font_size"
                android:gravity="center_horizontal"
                android:singleLine="true"
                android:text="@string/info_link_mark"/>
        </LinearLayout>
        <View android:layout_height="2dip" android:layout_width="match_parent"
            android:background="@android:color/holo_blue_light" />
        <LinearLayout
            android:id="@+id/go_mobile_info"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_height="50dp"
                android:layout_width="0dp"
                android:layout_marginLeft="20dp"
                android:textSize="@dimen/user_info_font_size"
                android:gravity="center_vertical"
                android:text="@string/phone"
                android:layout_weight="3"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="5"
                android:maxLength="16"
                android:textSize="@dimen/user_info_font_size"
                android:textColor="@android:color/darker_gray"
                android:gravity="right"
                android:singleLine="true"
                android:text="13650789975"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:maxLength="16"
                android:textSize="@dimen/user_info_font_size"
                android:gravity="center_horizontal"
                android:singleLine="true"
                android:text="@string/info_link_mark"/>
        </LinearLayout>
        <View android:layout_height="2dip" android:layout_width="match_parent"
            android:background="@android:color/holo_blue_light" />
        <LinearLayout
            android:id="@+id/go_wechat_info"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_height="50dp"
                android:layout_width="0dp"
                android:layout_marginLeft="20dp"
                android:textSize="@dimen/user_info_font_size"
                android:gravity="center_vertical"
                android:text="@string/wechat"
                android:layout_weight="3"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="5"
                android:maxLength="16"
                android:textSize="@dimen/user_info_font_size"
                android:textColor="@android:color/darker_gray"
                android:gravity="right"
                android:singleLine="true"
                android:text="东奔西走"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:maxLength="16"
                android:textSize="@dimen/user_info_font_size"
                android:gravity="center_horizontal"
                android:singleLine="true"
                android:text="@string/info_link_mark"/>
        </LinearLayout>
        <View android:layout_height="2dip" android:layout_width="match_parent"
            android:background="@android:color/holo_blue_light" />


</LinearLayout>
